# shinkuro-rs

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
src/: formatter.rs  loader.rs  main.rs  mcp.rs  model.rs  prompt.rs
