[package]
name = "shinkuro-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
git2 = "0.19"
url = "2"
shellexpand = "3"
anyhow = "1"
