[package]
name = "shinkuro-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DiscreteTom/shinkuro-rs"

[[bin]]
name = "shinkuro"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
git2 = "0.19"
url = "2"
shellexpand = "3"
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
