[package]
name = "shinkuro"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/DiscreteTom/shinkuro-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
url = "2"
shellexpand = "3"
anyhow = "1"
gray_matter = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
